fix alignment of header search on wide screens the added padding-top was causing the form to sit too low on wide screen.
This removes padding added to the form for
the small screen version of the menu, in
commit cebea2496b3cd8e5afe08bbe2cdabb818993fa1d

--- a/app/assets/stylesheets/responsive/_header_layout.scss
+++ b/app/assets/stylesheets/responsive/_header_layout.scss
@@ -135,6 +135,9 @@
         @include lte-ie7 {
            display: inline;
         }
+        @include respond-min( $main_menu-mobile_menu_cutoff ){
+          padding-top: 0;
+        }
     }
     input{
         @include grid-column($columns:9);
